# applied_python

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
model_service/: Dockerfile  data.csv  fastapi_service.py
telegram_bot/: Dockerfile  bot.py
telegram_bot/handlers/: __init__.py  helper_.py  keyboards.py  model_.py  statistics_.py  statistics_middleware.py
